# RTK_GPS_System

./: .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yml  ublox_notes.md
ChronyServer/: Dockerfile  chrony.conf  startup_chronyd.sh
GPSServer/: Dockerfile  startup_gpsd.sh
LORAArduinoCode/: README.md
LORAArduinoCode/Receiver/: Receiver.ino
LORAArduinoCode/Sender/: Sender.ino
NTRIPServer/: Dockerfile
ansible_environment/: .vault_pass  Dockerfile  README.md  ansible.cfg  docker-compose.yml  hosts  vault_password.env
ansible_environment/playbooks/: build_gpsd.yml  build_rtklib.yml  cleanup_apt.yml  cleanup_ubuntu.yml  configure_startup.yml  copy_and_build_containers.yml  copy_and_build_source.yml  disable_bluetooth_add_serial.yml  disable_serial_console.yml  install_docker.yml  install_log2ram.yml  install_tools.yml  setup_anonymous_ftp.yml  setup_base_station_rpi.yml  setup_chrony.yml  setup_gpsd.yml  setup_hotspot.yml  setup_nfs_share.yml  setup_pps_hardware.yml  setup_rpi.yml  setup_time_server.yml
ansible_environment/templates/: 01-static_eth0.conf  02-ap_wireless.conf  50-spidev.rules  chrony.conf  dhcpd.conf  dnsmasq.conf  docker-daemon.j2  gpsd.conf  gpstools-path.sh  hostapd.conf  vsftpd.conf
config_files/: static_ip_interfaces_file
gps_control/: README.md
gps_control/gps_control/: Cargo.toml
gps_control/gps_control/src/: main.rs
gps_control/gps_control/src/gps_interface/: mod.rs
gps_control/gps_control/src/lora_streaming/: mod.rs
gps_control/gps_control/startup_scripts/: rtk_base.service
gps_control/server/: Cargo.toml
(+26 files in other folders)
